--- a/source/index.html
+++ b/source/index.html
@@ -31,44 +31,50 @@
   			</ul>
   		</div>
   		</nav>
+  		</header>
+
+  	<main class="page-main">
+
   		<section class="download-menu">
-  			<button class="download-menu__download-button" type="button">Скачать приложение</button>
+  			<a class="download-menu__download-link">Скачать приложение</a>
   			<ul class="download-menu__platform">
-  				<li class="download-menu__platform__item">
+  				<li class="download-menu__item apple-platform">
   					<a>Apple</a>
   				</li>
 
-  				<li class="download-menu__platform__item">
+  				<li class="download-menu__item android-platform">
   					<a>Android</a>
   				</li>
 
-  				<li class="download-menu__platform__item">
+  				<li class="download-menu__item windows-platform">
   					<a>Windows</a>
   				</li>
   			</ul>
   			<p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
   		</section>
-  	</header>
 
-  	<main class="page-main">
-  		<h2 class="visually-hidden">Приложение PINK для общения по Сети</h2>
-  		<p>Устали от серости мегаполиса?</p>
-  		<p>Нам есть, что предложить</p>
+  		<h1 class="visually-hidden">Приложение PINK для общения по Сети</h1>
+
+  		<div class="proposal-section">
+  			<p>Устали от серости мегаполиса?</p>
+  			<p>Нам есть, что предложить</p>
+  		</div>
+
   		<section class="features">
   			<div class="features__wrapper">
   			<h2 class="visually-hidden">Преимущества приложения</h2>
   			<ul class="features__list">
-  				<li class="features__list features-item">
+  				<li class="features__item">
   					<h3 class="features__title">Поднимает настроение</h3>
   					<p class="features__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>  					
   				</li>
 
-  				<li class="features__list features-item">
+  				<li class="features__item">
   					<h3 class="features__title">Меняет мир вокруг</h3>
   					<p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p> 
   				</li>
 
-  				<li class="features__list features-item">
+  				<li class="features__item">
   					<h3 class="features__title">Заводит новых друзей</h3>
   					<p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p> 
   				</li>
@@ -81,12 +87,28 @@
   			<div class="reviews__wrapper slider">
   			<h2 class="visually-hidden">Отзывы пользователей</h2>
   			<div class="reviews__list slider__list">
-  				<blockquote class="reviews__item slider__item">
-  					<cite class="reviews__author">Николай Петров</cite>
-  					<p class="reviews__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
-  				</blockquote>
-  				<button class="reviews__prev" type="button">Предыдущий отзыв</button>
-  				<button class="reviews__next" type="button">Следующий отзыв</button>
+  				<ul class="reviews__list">
+  					<li class="reviews__item">
+		  				<blockquote class="slider__item">
+		  					<cite class="reviews__author">Николай Петров</cite>
+		  					<p class="reviews__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
+		  				</blockquote>
+		  			</li>
+
+		  			<li class="reviews__item">
+		  				<blockquote class="slider__item">
+		  					<cite class="reviews__author">Павел Кочерыжкин</cite>
+		  					<p class="reviews__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
+		  				</blockquote>
+		  			</li>
+
+		  			<li class="reviews__item">
+		  				<blockquote class="slider__item">
+		  					<cite class="reviews__author">Иван Иванов</cite>
+		  					<p class="reviews__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
+		  				</blockquote>
+		  			</li>
+  				</ul>
   			</div>
   			<p class="reviews__toggles slider__toggles">
   				<button class="slider__toogle" type="button">1</button>
@@ -94,27 +116,27 @@
   				<button class="slider__toogle" type="button">3</button>
   			</p>
   			</div>
-  			<!-- другие отзывы -->
+  			
   		</section>
 
   		<section class="prices">
-  			<div class="prices_wrapper slider">
+  			<div class="prices__wrapper slider">
   			<table class="prices__list">
   				<tr>
-  					<td class="prices_value prices__title">Стандарт 3,99 USD</td>
+  					<td class="prices__value prices__title">Стандарт 3,99 USD</td>
   				</tr>
   				<tr>
-  					<td class="prices_value">Розовый фильтр</td>
+  					<td class="prices__value">Розовый фильтр</td>
   				</tr>
   				<tr>
-  					<td class="prices_value">Смайлики</td>
+  					<td class="prices__value">Смайлики</td>
   				</tr>
   				<tr>
-  					<td class="prices_value">Комментарии</td>
+  					<td class="prices__value">Комментарии</td>
   				</tr>
   			</table>
   			<!-- другие цены -->
-  			<p class="prices_toggles slider__toggles">
+  			<p class="prices__toggles slider__toggles">
   				<button class="slider__toogle" type="button">1</button>
   				<button class="slider__toogle" type="button">2</button>
   				<button class="slider__toogle" type="button">3</button>
@@ -127,19 +149,19 @@
   		<div class="page-footer__contacts contacts">
   			<b class="contacts__title">Остались вопросы? Свяжитесь с нами!</b>
   			<ul class="contacts__list">
-  				<li class="contacts__list contacts-item">
-  					<h3 class="contacts-title">Звоните:</h3>
-  					<p class="contacts-description">+7 (812) 555-66-66</p>
+  				<li class="contacts__item">
+  					<h3 class="contacts__title">Звоните:</h3>
+  					<p class="contacts__description">+7 (812) 555-66-66</p>
   				</li>
 
-  				<li class="contacts__list contacts-item">
-  					<h3 class="contacts-title">Пишите:</h3>
-  					<p class="contacts-description">mail@htmlacademy.ru</p>
+  				<li class="contacts__item">
+  					<h3 class="contacts__title">Пишите:</h3>
+  					<p class="contacts__description">mail@htmlacademy.ru</p>
   				</li>
 
-  				<li class="contacts__list contacts-item">
-  					<h3 class="contacts-title">Приезжайте в гости:</h3>
-  					<p class="contacts-description">ул. Большая Конюшенная, 19/8</p>
+  				<li class="contacts__item">
+  					<h3 class="contacts__title">Приезжайте в гости:</h3>
+  					<p class="contacts__description">ул. Большая Конюшенная, 19/8</p>
   				</li>
   			</ul>
   		</div>
