Добавление разметки страницы form.html

--- a/source/index.html
+++ b/source/index.html
@@ -34,26 +34,25 @@
   		</header>
 
   	<main class="page-main">
+  		<h1 class="visually-hidden">Приложение PINK для общения по Сети</h1>
 
   		<section class="download-menu">
   			<a class="download-menu__download-link">Скачать приложение</a>
   			<ul class="download-menu__platform">
-  				<li class="download-menu__item apple-platform">
+  				<li class="download-menu__item--apple">
   					<a>Apple</a>
   				</li>
 
-  				<li class="download-menu__item android-platform">
+  				<li class="download-menu__item--android">
   					<a>Android</a>
   				</li>
 
-  				<li class="download-menu__item windows-platform">
+  				<li class="download-menu__item--windows">
   					<a>Windows</a>
   				</li>
   			</ul>
   			<p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
   		</section>
-
-  		<h1 class="visually-hidden">Приложение PINK для общения по Сети</h1>
 
   		<div class="proposal-section">
   			<p>Устали от серости мегаполиса?</p>
@@ -123,7 +122,7 @@
   			<div class="prices__wrapper slider">
   			<table class="prices__list">
   				<tr>
-  					<td class="prices__value prices__title">Стандарт 3,99 USD</td>
+  					<td class="prices__title">Стандарт 3,99 USD</td>
   				</tr>
   				<tr>
   					<td class="prices__value">Розовый фильтр</td>
