Исправление разметки в index.html и form.html

--- a/source/index.html
+++ b/source/index.html
@@ -39,15 +39,15 @@
   		<section class="download-menu">
   			<a class="download-menu__download-link">Скачать приложение</a>
   			<ul class="download-menu__platform">
-  				<li class="download-menu__item--apple">
+  				<li class="download-menu__item download-menu__item--apple">
   					<a>Apple</a>
   				</li>
 
-  				<li class="download-menu__item--android">
+  				<li class="download-menu__item download-menu__item--android">
   					<a>Android</a>
   				</li>
 
-  				<li class="download-menu__item--windows">
+  				<li class="download-menu__item download-menu__item--windows">
   					<a>Windows</a>
   				</li>
   			</ul>
