--- a/source/photo.html
+++ b/source/photo.html
@@ -34,101 +34,125 @@
   		
   	</header>
   	<main class="page-main">
-  		<div class="contest-proposal">Фотографии пользователей</div>
+  		<h1 class="visually-hidden">Фотографии пользователей</h1>
+  		<div class="inner-page-intro">Фотографии пользователей</div>
   		<div class="main-nav__wrapper">
-  		<section class="photo-user">
-	  		<p class="photo-user__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
-	  		<ul class="photo-user__list">
-	  			<li class="photo-user__item">
-	  				<img src="http://placehold.it/150x100">
-	  				<blockquote>
-	  					<cite class="photo-user__author">Анна <span class="photo-user__author photo-user__author--time">(5 минут назад)</span></cite>
-	  					<p class="photo-user__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-	  				</blockquote>
-	  				<form class="photo-user__button-form">
-	  					<button class="photo-user__like" type="button">Нравится: 215</button>
-	  				</form>
+
+  		<section class="users-photos">
+	  		<p class="users-photos__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
+	  		<ul class="users-photos__list">
+	  			<li class="users-photos__item user-photo">
+	  				<img class="user-photo__picture" src="http://placehold.it/150x100">
+	  				<div class="user-photo__description">
+	  					<div class="user-photo__comment">
+	  						<cite class="user-photo__author">Анна</cite>
+	  						<time class="user-photo__time">(5 минут назад)</time>
+	  						<blockquote class="user-photo__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</blockquote>
+	  					</div>
+	  					<form class="user-photo__like-form">
+	  						<button class="user-photo__like" type="button">Нравится: 215</button>
+	  					</form>
+	  				</div>
 	  			</li>
 
-	  			<li class="photo-user__item">
-	  				<img src="http://placehold.it/150x100">
-	  				<blockquote>
-						<cite class="photo-user__author">Левон <span class="photo-user__author photo-user__author--time">(5 часов назад)</span></cite>
-						<p class="photo-user__text">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-					</blockquote>
-					<form class="photo-user__button-form">
-	  					<button class="photo-user__like" type="button">Нравится: 356</button>
-	  				</form>
+	  			<li class="users-photos__item user-photo">
+	  				<img class="user-photo__picture" src="http://placehold.it/150x100">
+	  				<div class="user-photo__description">
+	  					<div class="user-photo__comment">
+	  						<cite class="user-photo__author">Левон</cite>
+	  						<time class="user-photo__time">(5 часов назад)</time>
+	  						<blockquote class="user-photo__text">Вчера он на луну летал, сегодня в руки к нам попал.</blockquote>
+	  					</div>
+	  					<form class="user-photo__like-form">
+	  						<button class="user-photo__like" type="button">Нравится: 356</button>
+	  					</form>
+	  				</div>
 	  			</li>
 
-	  			<li class="photo-user__item">
-	  				<img src="http://placehold.it/150x100">
-	  				<blockquote>
-						<cite class="photo-user__author">Антон <span class="photo-user__author photo-user__author--time">(12 часов назад)</span></cite>
-						<p class="photo-user__text">Соседи будут рады!</p>
-					</blockquote>
-					<form class="photo-user__button-form">
-	  					<button class="photo-user__like" type="button">Нравится: 666</button>
-	  				</form>
+	  			<li class="users-photos__item user-photo">
+	  				<img class="user-photo__picture" src="http://placehold.it/150x100">
+	  				<div class="user-photo__description">
+	  					<div class="user-photo__comment">
+	  						<cite class="user-photo__author">Антон</cite>
+	  						<time class="user-photo__time">(12 часов назад)</time>
+	  						<blockquote class="user-photo__text">Соседи будут рады!</blockquote>
+	  					</div>
+	  					<form class="user-photo__like-form">
+	  						<button class="user-photo__like" type="button">Нравится: 666</button>
+	  					</form>
+	  				</div>
 	  			</li>
 
-	  			<li class="photo-user__item">
-	  				<img src="http://placehold.it/150x100">
-	  				<blockquote>
-						<cite class="photo-user__author">Борис <span class="photo-user__author photo-user__author--time">(20 часов назад)</span></cite>
-						<p class="photo-user__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
-					</blockquote>
-					<form class="photo-user__button-form">
-	  					<button class="photo-user__like" type="button">Нравится: 215</button>
-	  				</form>
+	  			<li class="users-photos__item user-photo">
+	  				<img class="user-photo__picture" src="http://placehold.it/150x100">
+	  				<div class="user-photo__description">
+	  					<div class="user-photo__comment">
+	  						<cite class="user-photo__author">Борис</cite>
+	  						<time class="user-photo__time">(20 часов назад)</time>
+	  						<blockquote class="user-photo__text">Здесь могла быть ваша цитата о высоком и вечном.</blockquote>
+	  					</div>
+	  					<form class="user-photo__like-form">
+	  						<button class="user-photo__like" type="button">Нравится: 215</button>
+	  					</form>
+	  				</div>
 	  			</li>
 
-	  			<li class="photo-user__item">
-	  				<img src="http://placehold.it/150x100">
-	  				<blockquote>
-						<cite class="photo-user__author">Сергей <span class="photo-user__author photo-user__author--time">(25 часов назад)</span></cite>
-						<p class="photo-user__text">Самая кубанская в мире!</p>
-					</blockquote>
-					<form class="photo-user__button-form">
-	  					<button class="photo-user__like" type="button">Нравится: 4</button>
-	  				</form>
+	  			<li class="users-photos__item user-photo">
+	  				<img class="user-photo__picture" src="http://placehold.it/150x100">
+	  				<div class="user-photo__description">
+	  					<div class="user-photo__comment">
+	  						<cite class="user-photo__author">Сергей</cite>
+	  						<time class="user-photo__time">(25 часов назад)</time>
+	  						<blockquote class="user-photo__text">Самая кубанская в мире!</blockquote>
+	  					</div>
+	  					<form class="user-photo__like-form">
+	  						<button class="user-photo__like" type="button">Нравится: 4</button>
+	  					</form>
+	  				</div>
 	  			</li>
 
-	  			<li class="photo-user__item">
-	  				<img src="http://placehold.it/150x100">
-	  				<blockquote>
-						<cite class="photo-user__author">Максим <span class="photo-user__author photo-user__author--time">(40 часов назад)</span></cite>
-						<p class="photo-user__text">Где снего-то?</p>
-					</blockquote>
-					<form class="photo-user__button-form">
-	  					<button class="photo-user__like" type="button">Нравится: 150</button>
-	  				</form>
+	  			<li class="users-photos__item user-photo">
+	  				<img class="user-photo__picture" src="http://placehold.it/150x100">
+	  				<div class="user-photo__description">
+	  					<div class="user-photo__comment">
+	  						<cite class="user-photo__author">Максим</cite>
+	  						<time class="user-photo__time">(40 часов назад)</time>
+	  						<blockquote class="user-photo__text">Где снего-то?</blockquote>
+	  					</div>
+	  					<form class="user-photo__like-form">
+	  						<button class="user-photo__like" type="button">Нравится: 150</button>
+	  					</form>
+	  				</div>
 	  			</li>
 
-	  			<li class="photo-user__item">
-	  				<img src="http://placehold.it/150x100">
-	  				<blockquote>
-						<cite class="photo-user__author">Надежда <span class="photo-user__author photo-user__author--time">(45 часов назад)</span></cite>
-						<p class="photo-user__text">Всем GM и взаимные лайки!</p>
-					</blockquote>
-					<form class="photo-user__button-form">
-	  					<button class="photo-user__like" type="button">Нравится: 2560</button>
-	  				</form>
+	  			<li class="users-photos__item user-photo">
+	  				<img class="user-photo__picture" src="http://placehold.it/150x100">
+	  				<div class="user-photo__description">
+	  					<div class="user-photo__comment">
+	  						<cite class="user-photo__author">Надежда</cite>
+	  						<time class="user-photo__time">(45 часов назад)</time>
+	  						<blockquote class="user-photo__text">Всем GM и взаимные лайки!</blockquote>
+	  					</div>
+	  					<form class="user-photo__like-form">
+	  						<button class="user-photo__like" type="button">Нравится: 2560</button>
+	  					</form>
+	  				</div>
 	  			</li>
 	  		</ul>
 	  	</section>
+
   		</div>
-  		<section class="photo-download">
-  			<p class="photo-download__description">Затми их всех! Выкладывайте все, что накопилось на телефоне!</p>
+  		<section class="photo-upload">
+  			<p class="photo-upload__description">Затми их всех! Выкладывайте все, что накопилось на телефоне!</p>
   			<img src="http://placehold.it/150x100">
-  			<form class="photo-download__menu">
-  				<button class="photo-download__button photo-download__button--crop" type="button">Вырезать</button>
-  				<button class="photo-download__button photo-download__button--fill" type="button">Цвет</button>
-  				<button class="photo-download__button photo-download__button--contrast" type="button">Контраст</button>
+  			<form class="photo-upload__menu">
+  				<button class="photo-upload__button photo-upload__button--crop" type="button">Вырезать</button>
+  				<button class="photo-upload__button photo-upload__button--fill" type="button">Цвет</button>
+  				<button class="photo-upload__button photo-upload__button--contrast" type="button">Контраст</button>
   				<!-- Полоска формы -->
 
-  				<button class="photo-download__button photo-download__button--submit" type="submit">Запостить</button>
-  				<input class="photo-download__button photo-download__button--reset" type="reset" value="Отмена" disabled>
+  				<button class="photo-upload__button photo-upload__button--submit" type="submit">Запостить</button>
+  				<button class="photo-upload__button photo-upload__button--reset" type="reset" disabled>Отмена</button>
   			</form>
   		</section>
   	</main>
