Дополнительные правки разметки и БЭМ

--- a/source/form.html
+++ b/source/form.html
@@ -39,7 +39,7 @@
 
       <div class="contest-proposal">
         <p>Конкурс на самое безбашенное путешествие с Пинк</p>
-          <p>Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!</p>
+        <p>Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!</p>
       </div>
 
       <form class="contest-form" action="https://echo.htmlacademy.ru" method="post">
@@ -66,48 +66,48 @@
           <legend class="contest-form__title">Ваши безбашенные достижения в путешествии</legend>
           <ul class="contest-form__list">
               <li class="contest-form__item">
-                <div class="form-field">
-                  <input class="form-field form-field--checkbox form-field__input" type="checkbox" name="selfie" id="selfie" checked>
-                  <label class="form-field form-field--checkbox form-field__label" for="selfie">Сделал селфи с акулой</label>
+                <div class="form-field form-field--checkbox">
+                  <input class="form-field__input" type="checkbox" name="selfie" id="selfie" checked>
+                  <label class="form-field__label" for="selfie">Сделал селфи с акулой</label>
                 </div>
               </li>
 
               <li class="contest-form__item">
-                <div class="form-field">
-                  <input class="form-field form-field--checkbox form-field__input" type="checkbox" name="beach" id="beach" checked>
-                  <label class="form-field form-field--checkbox form-field__label" for="beach">Обгорел на пляже</label>
+                <div class="form-field form-field--checkbox">
+                  <input class="form-field__input" type="checkbox" name="beach" id="beach" checked>
+                  <label class="form-field__label" for="beach">Обгорел на пляже</label>
                 </div>
               </li>
 
               <li class="contest-form__item">
-                <div class="form-field">
-                  <input class="form-field form-field--checkbox form-field__input" type="checkbox" name="chuck" id="chuck">
-                  <label class="form-field form-field--checkbox form-field__label" for="chuck">Видел Чака Норриса</label>
+                <div class="form-field form-field--checkbox">
+                  <input class="form-field__input" type="checkbox" name="chuck" id="chuck">
+                  <label class="form-field__label" for="chuck">Видел Чака Норриса</label>
                 </div>
               </li>
 
               <li class="contest-form__item">
-                <div class="form-field">
-                  <input class="form-field form-field--checkbox form-field__input" type="checkbox" name="gift" id="gift">
-                  <label class="form-field form-field--checkbox form-field__label" for="gift">Накупил сувениров</label>
+                <div class="form-field form-field--checkbox">
+                  <input class="form-field__input" type="checkbox" name="gift" id="gift">
+                  <label class="form-field__label" for="gift">Накупил сувениров</label>
                 </div>
               </li>
 
               <li class="contest-form__item">
-                <div class="form-field">
-                  <input class="form-field form-field--checkbox form-field__input" type="checkbox" name="tower" id="tower" checked>
-                  <label class="form-field form-field--checkbox form-field__label" for="tower">Удержал башню</label>
+                <div class="form-field form-field--checkbox">
+                  <input class="form-field__input" type="checkbox" name="tower" id="tower" checked>
+                  <label class="form-field__label" for="tower">Удержал башню</label>
                 </div>
               </li>
 
               <li class="contest-form__item">
-                <div class="form-field">
-                  <input class="form-field form-field--checkbox form-field__input" type="checkbox" name="hotel" id="hotel">
-                  <label class="form-field form-field--checkbox form-field__label" for="hotel">Разгромил отель</label>
+                <div class="form-field form-field--checkbox">
+                  <input class="form-field__input" type="checkbox" name="hotel" id="hotel">
+                  <label class="form-field__label" for="hotel">Разгромил отель</label>
                 </div>
               </li>
           </ul>
-      </fieldset>
+        </fieldset>
 
         <fieldset class="contest-form__group">
           <legend class="visually-hidden">Контактные данные</legend>
@@ -126,23 +126,23 @@
           <legend class="contest-form__title">С каким приложением путешествовали?</legend>
           <ul class="contest-form__list">
               <li class="contest-form__item">
-                <div class="form-field">
-                  <input class="form-field form-field--radio form-field__input" type="radio" name="platform" id="ios" value="iOS" checked>
-                  <label class="form-field form-field--radio form-field__label" for="ios">Pink для iOS</label>
+                <div class="form-field form-field--radio">
+                  <input class="form-field__input" type="radio" name="platform" id="ios" value="iOS" checked>
+                  <label class="form-field__label" for="ios">Pink для iOS</label>
                 </div>
               </li>
 
               <li class="contest-form__item">
-                <div class="form-field">
-                  <input class="form-field form-field--radio form-field__input" type="radio" name="platform" id="android" value="Android">
-                  <label class="form-field form-field--radio form-field__label" for="android">Pink на Android</label>
+                <div class="form-field form-field--radio">
+                  <input class="form-field__input" type="radio" name="platform" id="android" value="Android">
+                  <label class="form-field__label" for="android">Pink на Android</label>
                 </div>
               </li>
 
               <li class="contest-form__item">
-                <div class="form-field">
-                  <input class="form-field form-field--radio form-field__input" type="radio" name="platform" id="windows" value="Windows Phone">
-                  <label class="form-field form-field--radio form-field__label" for="windows">Windows Phone</label>
+                <div class="form-field form-field--radio">
+                  <input class="form-field__input" type="radio" name="platform" id="windows" value="Windows Phone">
+                  <label class="form-field__label" for="windows">Windows Phone</label>
                 </div>
               </li>
             </ul>
@@ -155,11 +155,9 @@
           </div>
         </div>
 
-      <button class="contest-form__button" type="submit">Отправить форму</button>
-      <p class="contest-form__important">* - обязательные поля</p>
-        </form>
-
-
+        <button class="contest-form__button" type="submit">Отправить форму</button>
+        <p class="contest-form__important">* - обязательные поля</p>
+      </form>
     </main>
 
     <footer class="page-footer">
