--- a/source/index.html
+++ b/source/index.html
@@ -2,13 +2,19 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
     <title>Скачать приложение Pink</title>
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="" width="75" height="22" alt="PINK">
-      </a>
+
+      <div class="page-header__logo">
+        <a>
+          <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="23" alt="PINK">
+        </a>
+      </div>
+
+
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
@@ -31,6 +37,7 @@
         </ul>
       </div>
       </nav>
+
       </header>
 
     <main class="page-main">
@@ -78,7 +85,7 @@
             <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
           </li>
         </ul>
-        <img src="http://placehold.it/150x100">
+        <img src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Приложение PINK">
         </div>
       </section>
 
@@ -122,7 +129,7 @@
         <div class="prices__wrapper slider">
         <table class="prices__list">
           <tr>
-            <td class="prices__title">Стандарт 3,99 USD</td>
+            <td class="prices__title">Стандарт <span class="prices__cost">3,99 USD</span></td>
           </tr>
           <tr>
             <td class="prices__value">Розовый фильтр</td>
@@ -164,7 +171,7 @@
           </li>
         </ul>
       </div>
-      <!-- Карта -->
+      <img src="img/bg-map-mobile@1x.png" width="320" height="645" alt="Карта расположения офиса">
     </footer>
   </body>
 </html>
