--- a/source/form.html
+++ b/source/form.html
@@ -2,13 +2,17 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
     <title>Принять участие в конкурсе с PINK</title>
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="" width="75" height="22" alt="PINK">
-      </a>
+
+      <div class="page-header__logo">
+        <a>
+          <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="23" alt="PINK">
+        </a>
+      </div>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
@@ -38,8 +42,8 @@
       <h1 class="visually-hidden">Конкурс от сервиса PINK</h1>
 
       <div class="contest-proposal">
-        <p>Конкурс на самое безбашенное путешествие с Пинк</p>
-        <p>Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!</p>
+        <p class="content-proposal__header">Конкурс на самое безбашенное путешествие с Пинк</p>
+        <p class="content-proposal__main">Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!</p>
       </div>
 
       <form class="contest-form" action="https://echo.htmlacademy.ru" method="post">
@@ -151,18 +155,18 @@
         <div class="contest-form__group">
           <label class="contest-form__title">Опишите свои эмоции</label>
           <div class="form-field">
-            <textarea class="form-field__comment-text" name="comment">Можно прям в красках, не стесняясь в выражениях</textarea>
+            <textarea class="form-field__comment-text" name="comment" cols="30">Можно прям в красках, не стесняясь в выражениях</textarea>
           </div>
         </div>
 
         <button class="contest-form__button" type="submit">Отправить форму</button>
-        <p class="contest-form__important">* - обязательные поля</p>
+        <p class="contest-form__important"><span class="contest-form__important contest-form__important--star">*</span> - обязательные поля</p>
       </form>
     </main>
 
     <footer class="page-footer">
       <a class="page-footer__logo">
-        <img class="page-footer__logo-image" src="" width="75" height="22" alt="PINK">
+        <img class="page-footer__logo-image" src="img/logo-pink-blue-mobile.svg" width="147" height="40" alt="PINK">
       </a>
 
       <ul class="social-list">
@@ -179,10 +183,10 @@
         </li>
       </ul>
 
-      <p>
+      <p class="developer">
         Разработано
         <a href="http://htmlacademy.ru">
-          <img class="developer__logo" src="" width="27" height="34" alt="HTML Academy">
+          <img class="developer__logo" src="img/logo-htmlacademy.svg" width="26" height="34" alt="HTML Academy">
         </a>
       </p>
     </footer>
