--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,6 @@
           <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="23" alt="PINK">
         </a>
       </div>
-
-
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
@@ -38,7 +36,7 @@
       </div>
       </nav>
 
-      </header>
+    </header>
 
     <main class="page-main">
       <h1 class="visually-hidden">Приложение PINK для общения по Сети</h1>
@@ -153,7 +151,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__contacts contacts">
-        <b class="contacts__title">Остались вопросы? Свяжитесь с нами!</b>
+        <b class="contacts__message">Остались вопросы? Свяжитесь с нами!</b>
         <ul class="contacts__list">
           <li class="contacts__item">
             <h3 class="contacts__title">Звоните:</h3>
